--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Noto+Sans&display=swap');
 body {
   background-image: url('https://oir.mobi/uploads/posts/2021-03/1616967146_6-p-svetlo-serii-fon-6.jpg');
+  height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
   margin: 0;
